# backtracking

./: README.md
backtracking/: demo.ipynb  steering.py
backtracking/dataset/: activation_dataset.py  dataset_stage.py  storage.py
backtracking/dataset/open_math/: open_math_dataset.py
evan-backtracking/: README.md  demo.ipynb  pyproject.toml
evan-backtracking/backtracking/: ops.py
evan-backtracking/backtracking/dataset/: dataset_proxy.py  dataset_transform.py  numpy_array.py
evan-backtracking/backtracking/dataset/open_math/: __init__.py  activation_transform.py  match_transform.py  token_transform.py
